--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>gd ig</p>
+    <p onclick="showAlert()">gd ig</p>
     <script>
-      alert('This is funny')
+      function showAlert() {
+          alert('You clicked')
+      }
     </script>
   </body>
 </html>
